2002-10-16  Bill Bumgarner  <bbum@codefab.com>

	* NSClassFromString() was implemented twice in the Foundation's
	__init__.py.  The second implementation was supposed to be
	NSStringFromClass(). Fixed.

	* Added propertyListFromPythonCollection() function to
	Foundation.  It converts a Python collection (string / dict /
	array / tuple / numbers) into a corresponding tree of Obj-C
	NSString / NSDictionary / NSArray / NSArray / NSNumber instances.

2002-10-15 Ronald Oussoren <oussoren@cistron.nl>
	* Exceptions are now transparently transfered to the other language.
	  Upon transitioning back into the source language the exception
	  regains its orginal 'identity'

2002-10-11  Bill Bumgarner  <bbum@codefab.com>

	* Removed various debugging/development noise from startup.

	* Regenerated various incs in Modules/Cocoa based on new scripts.

	* Updated Examples/WebServicesTool to be compatible with Apple
	supplied Python.  Created a new main() implementation that
	transfers control to '/usr/bin/python' via execve().

	* Modules/Cocoa/scripts: Modified all scripts to use 0/1 instead
	of False/True for compatibility with Python 2.2.  Modified scripts
	that generate a table of information to emit the 'static' keyword
	at the head of the declaration.  This fixes a namespace collision
	with the Apple supplied Python.
	

2002-10-10 Ronald Oussoren <oussoren@cistron.nl>
	* Modules/objc/objc-class.m: Implemented a 'class_traverse' function
	  For some reason Python 2.2.0 crashes when we inherit tp_traverse
	  from PyTypeObject AND the ObjCClass is not fully constructed.
	* MANIFEST: Updated to current situation
	* README: Apple python now seems to work

2002-10-09 Ronald Oussoren <oussoren@cistron.nl>
	* Move Cocoa.AppKit and Cocoa.Foundation packages to AppKit
	  and Foundation
	* Some backward compatibility code for Python 2.2.0. This
	  includes disabling the GC module for now: This module interacts
	  badly with us.

2002-09-28 Ronald Oussoren <oussoren@cistron.nl>